# rdfind2

./: .pre-commit-config.yaml  pyproject.toml  rdfind2.py  readme.md
.github/: mergify.yml  renovate.json
.github/workflows/: lint.yaml  release.yaml
