[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rdfind2"
version = "0.1.0"
authors = [
    "trim21 <trim21.me@gmail.com>",
]
description = "Find duplicated files very fast"
readme = "readme.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

click = "^8"
tqdm = "^4.65.0"

[tool.poetry.scripts]
rdfind2 = "rdfind2:rdfind2"
